Fix overflow and Change style

--- a/public/output.css
+++ b/public/output.css
@@ -555,16 +555,12 @@ video {
   position: fixed;
 }
 
+.absolute {
+  position: absolute;
+}
+
 .m-0 {
   margin: 0px;
-}
-
-.ml-6 {
-  margin-left: 1.5rem;
-}
-
-.mt-3 {
-  margin-top: 0.75rem;
 }
 
 .mt-7 {
@@ -573,6 +569,10 @@ video {
 
 .mt-5 {
   margin-top: 1.25rem;
+}
+
+.mt-3 {
+  margin-top: 0.75rem;
 }
 
 .mt-10 {
@@ -591,6 +591,10 @@ video {
   margin-top: 5rem;
 }
 
+.mr-3 {
+  margin-right: 0.75rem;
+}
+
 .flex {
   display: flex;
 }
@@ -599,16 +603,20 @@ video {
   display: grid;
 }
 
-.h-10 {
-  height: 2.5rem;
-}
-
-.h-\[500px\] {
-  height: 500px;
-}
-
 .h-auto {
   height: auto;
+}
+
+.h-\[650px\] {
+  height: 650px;
+}
+
+.h-full {
+  height: 100%;
+}
+
+.h-10 {
+  height: 2.5rem;
 }
 
 .h-14 {
@@ -627,6 +635,14 @@ video {
   min-height: 100px;
 }
 
+.w-12 {
+  width: 3rem;
+}
+
+.w-full {
+  width: 100%;
+}
+
 .w-10 {
   width: 2.5rem;
 }
@@ -639,20 +655,28 @@ video {
   width: 18rem;
 }
 
-.w-full {
-  width: 100%;
-}
-
 .w-8 {
   width: 2rem;
 }
 
-.w-5 {
-  width: 1.25rem;
+.w-80 {
+  width: 20rem;
 }
 
-.w-12 {
-  width: 3rem;
+.w-\[80\%\] {
+  width: 80%;
+}
+
+.w-\[80vw\] {
+  width: 80vw;
+}
+
+.w-\[auto\] {
+  width: auto;
+}
+
+.w-\[90vw\] {
+  width: 90vw;
 }
 
 .min-w-\[100px\] {
@@ -663,12 +687,20 @@ video {
   max-width: 300px;
 }
 
+.max-w-xs {
+  max-width: 20rem;
+}
+
 .flex-\[1\] {
   flex: 1;
 }
 
 .flex-\[2\] {
   flex: 2;
+}
+
+.flex-\[1\.2\] {
+  flex: 1.2;
 }
 
 .basis-10 {
@@ -681,6 +713,14 @@ video {
 
 .basis-56 {
   flex-basis: 14rem;
+}
+
+.basis-60 {
+  flex-basis: 15rem;
+}
+
+.basis-16 {
+  flex-basis: 4rem;
 }
 
 .grid-cols-1 {
@@ -751,9 +791,9 @@ video {
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
-.bg-gray-800 {
+.bg-gray-600 {
   --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
 }
 
 .bg-slate-100\/10 {
@@ -770,6 +810,11 @@ video {
   background-color: rgb(17 24 39 / var(--tw-bg-opacity));
 }
 
+.bg-dark-background {
+  --tw-bg-opacity: 1;
+  background-color: rgb(32 32 32 / var(--tw-bg-opacity));
+}
+
 .p-5 {
   padding: 1.25rem;
 }
@@ -780,6 +825,10 @@ video {
 
 .p-2 {
   padding: 0.5rem;
+}
+
+.p-3 {
+  padding: 0.75rem;
 }
 
 .pb-16 {
@@ -802,6 +851,10 @@ video {
   padding-bottom: 13rem;
 }
 
+.pr-3 {
+  padding-right: 0.75rem;
+}
+
 .font-Lato {
   font-family: font-family: 'Lato', sans-serif;;
 }
@@ -811,14 +864,14 @@ video {
   line-height: 2.5rem;
 }
 
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-sm {
@@ -854,6 +907,10 @@ video {
   --headline-background: url("../rsc/Images/headline.png");
 }
 
+.menu-icon {
+  z-index: 5;
+}
+
 .headline-container {
   background-image: var(--headline-background);
   background-size: cover;
@@ -866,16 +923,24 @@ video {
   flex-direction: column;
   justify-content: center;
   padding: 1.5rem;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255, 0.7);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
 }
 
 .headline-text {
   min-width: 300px;
   max-width: 24rem;
   --tw-text-opacity: 1;
-  color: rgb(249 115 22 / var(--tw-text-opacity));
+  color: rgb(181 30 0 / var(--tw-text-opacity));
   background-image: var(--headline-background) no-repeat center center;
   background-clip: content-box;
+}
+
+.main-program {
+  background-image: url("../rsc/images/Background.png");
+  background-repeat: repeat;
+  background-size: 150%;
 }
 
 .section-header {
